# ellie.subtlecoolness.com

./: README.md  package.json  pelicanconf.py  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: github-pages.yaml
ci/: gen-dependabot.py  gen-github-workflows.py  gen-package-json.py  gen.py
content/2025-book/: chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-06.md  chapter-07.md  chapter-08.md  chapter-09.md  chapter-1.md  chapter-10.md  chapter-11.md  chapter-12.md  chapter-13.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-5.md  chapter-6.md  chapter-7.md  chapter-8.md
content/stick-adventures/: stick-adventures.md
themes/default/templates/: article.html  index.html
