[project]
name = "ellie-subtlecoolness-com"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown>=3.8.2",
    "pelican>=4.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "ty>=0.0.33",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
